fix(python_checks): require type checking to pass before running tests

--- a/.github/workflows/python_checks.yml
+++ b/.github/workflows/python_checks.yml
@@ -54,6 +54,8 @@ jobs:
             - uses: isort/isort-action@v1
     test:
         name: Tests (pytest)
+        needs:
+            - lsp
         if: ${{ inputs.pytest }}
         runs-on: ubuntu-latest
         steps:
