fix(python_checks): pytest should default to false

--- a/.github/workflows/python_checks.yml
+++ b/.github/workflows/python_checks.yml
@@ -10,7 +10,7 @@ on:
                 type: string
             pytest:
                 description: "Enable pytest testing"
-                default: true
+                default: false
                 required: false
                 type: boolean
 
