--- a/.github/workflows/python_checks.yml
+++ b/.github/workflows/python_checks.yml
@@ -24,18 +24,10 @@ jobs:
               id: setup_python
               with:
                   python-version: ${{ inputs.python_version }}
-            - name: venv cache
-              uses: actions/cache@v4
-              with:
-                  key: venv-${{ runner.os }}-${{ steps.setup_python.outputs.python-version }}-${{ hashFiles('requirements.txt') }}
-                  path: venv
+                  cache: "pip"
+                  cache-dependency-path: requirements.txt
             - name: install dependencies
-              run: |
-                  python -m venv venv
-                  source venv/bin/activate
-                  python -m pip install -r requirements.txt
-                  echo "${VIRTUAL_ENV}/bin" >> $GITHUB_PATH
-                  echo "VIRTUAL_ENV=${VIRTUAL_ENV}" >> $GITHUB_ENV
+              run: pip install -r requirements.txt
             - name: run pyright
               uses: jakebailey/pyright-action@v2
               with:
@@ -64,18 +56,10 @@ jobs:
               id: setup_python
               with:
                   python-version: ${{ inputs.python_version }}
-            - name: venv cache
-              uses: actions/cache@v4
-              with:
-                  key: venv-${{ runner.os }}-${{ steps.setup_python.outputs.python-version }}-${{ hashFiles('requirements.txt') }}
-                  path: venv
+                  cache: "pip"
+                  cache-dependency-path: requirements.txt
             - name: install dependencies
-              run: |
-                  python -m venv venv
-                  source venv/bin/activate
-                  python -m pip install -r requirements.txt
-                  echo "${VIRTUAL_ENV}/bin" >> $GITHUB_PATH
-                  echo "VIRTUAL_ENV=${VIRTUAL_ENV}" >> $GITHUB_ENV
+              run: pip install -r requirements.txt
             - name: run tests
               run: pytest --junitxml=junit/test-results-${{ steps.setup_python.outputs.python-version }}.xml
             - name: upload pytest results
